--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>Welcome</title>
 </head>
+
 <body>
 
   <div class="navbar">
@@ -18,4 +20,5 @@
   </div>
 
 </body>
+
 </html>
