--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>Login</title>
 </head>
+
 <body>
 
   <div class="navbar">
@@ -16,12 +18,13 @@
   <form action="/login" method="POST">
     <label for="email">Email</label>
     <input type="email" name="email" placeholder="Email" required />
-    
+
     <label for="password">Password</label>
     <input type="password" name="password" placeholder="Password" required />
-    
+
     <button type="submit">Login</button>
   </form>
 
 </body>
+
 </html>
